don't use wildcard for no-build
without this patch, no build being performed if --norootforbuild is
specified

Change-Id: I7c7592d997294bdd5ee5b5c3368d4704326ccfae

--- a/build
+++ b/build
@@ -873,7 +873,7 @@ while test -n "$1"; do
       *-no*init)
 	DO_INIT=false
       ;;
-      *-no*build)
+      *-no-build)
 	DO_BUILD=false
       ;;
       *-no*checks)
